@@ -1,33 +1,27 @@
 # Tank
-[Documentation](https://docs.google.com/document/d/1sVZRq164xdBZ4ZwfCPF2Z3tMYJiN8oBBJIk7QWxPBuA/edit?usp=sharing)
+[Documentation-Persian](https://docs.google.com/document/d/1sVZRq164xdBZ4ZwfCPF2Z3tMYJiN8oBBJIk7QWxPBuA/edit?usp=sharing)
+ 
+# Video Peresent
+[Video-Persian](https://drive.google.com/file/d/1ODvbZonotUxaxkeYkfCrGY-pj_E0DQK5/view?usp=share_link)
 
+# Requirement librarry
+ javafx
+ <ul>
+<li>
+add this to your VM in run java conformation (Replace AAA with your javafx-sdk-17.0-2.7/lib path) :
 
-# [video link](https://drive.google.com/file/d/1ODvbZonotUxaxkeYkfCrGY-pj_E0DQK5/view?usp=share_link)
+```
+--module-path AAA --add-modules javafx.controls,javafx.fxml
+```
+</li>
+</ul>
+
 <ul>
 <li>
-clone in your computer: 
-
-```
-git clone your_repo_url
-cd your_repo_dir
-```
-</li>
-
-<li>
-run tests from terminal:
-
+run clean-code tests from terminal :
+  
 ```
 mvn clean test
-```
-</li>
-
-<li>
-push changes to the repository:
-
-```
-git add . 
-git commit -m "commit message"
-git push
 ```
 </li>
 </ul>
